2017-02-26  Albert Graef  <aggraef@gmail.com>

	* pure.cc (main): Let --version report the git revision if we have
	it.

2017-02-24  Albert Graef  <aggraef@gmail.com>

	* 0.65 release. (It's about time.)

2017-02-24  Albert Graef  <aggraef@gmail.com>

	* interpreter.cc (codegen): Fix a crash bug in the compiler. The
	function environment was lost in case of a 'with' expression
	embedded in the second operand of a short-circuit logical
	expression. Note that in this case the 'with' expression has to be
	compiled twice, which messed up the FMap environment pointer. We
	now deal with this (rather peculiar and awfully obscure) situation
	on the fly in interpreter::codegen().

2016-02-15  Albert Graef  <aggraef@gmail.com>

	* pure/etc/pure-mode.el.in: Update Pure mode for Emacs 24.x (May
	09 2015) and silence warning about optional 2nd arg of
	display-completion-list (Dec 18 2015).

	* pure/runtime.cc: Allow pure_switch_interp to be called on a null
	pointer (this previously caused a failed assertion when running
	Pure VST plugins on the Mac). (Dec 14 2014)

	* pure/interpreter.cc, pure/printer.cc: Bugfixes in the debugger
	(fixes issue #32) and the expression printer. (Nov 09 2014)

	* pure/examples/ats_list_demo: ATS list demo example contributed
	by Barry Schwartz <sortsmill@crudfactory.com>. (Nov 05 2014)

	* pure/interpreter.cc: Bugfixes in ATS compilation. (Oct 30 2014)

	* pure/examples/bitcode/gauss_jordan.pure: ATS Gauss-Jordan
	example contributed by Barry Schwartz. (Oct 30 2014)

2014-10-28  Albert Graef  <aggraef@gmail.com>

	* 0.64 release.

2014-10-24  Albert Graef  <aggraef@gmail.com>

	* configure.ac, runtime.cc/h: Add Perl regex support. This is
	still experimental and currently disabled by default, as it may
	alter the interpretation of certain constructs in regular
	expressions. Configuring with --with-pcre enables it in the
	runtime (this needs libpcreposix, see http://www.pcre.org/).

2014-10-23  Albert Graef  <aggraef@gmail.com>
