@@ -1,0 +1,81 @@
+lucid::- (x/*0:101*/:xs/*0:11*/) = -x/*0:101*/:(lucid::- xs/*1:11*/)&;
+(x/*0:0101*/:xs/*0:011*/) lucid::+ (y/*0:101*/:ys/*0:11*/) = x/*0:0101*/+y/*0:101*/:(xs/*1:011*/ lucid::+ ys/*1:11*/)&;
+(x/*0:0101*/:xs/*0:011*/) lucid::- (y/*0:101*/:ys/*0:11*/) = x/*0:0101*/-y/*0:101*/:(xs/*1:011*/ lucid::- ys/*1:11*/)&;
+{
+  rule #0: (x:xs) lucid::+ (y:ys) = x+y:(xs lucid::+ ys)&
+  state 0: #0
+	<app> state 1
+  state 1: #0
+	<app> state 2
+  state 2: #0
+	: state 3
+  state 3: #0
+	<var> state 4
+  state 4: #0
+	<var> state 5
+  state 5: #0
+	<app> state 6
+  state 6: #0
+	<app> state 7
+  state 7: #0
+	: state 8
+  state 8: #0
+	<var> state 9
+  state 9: #0
+	<var> state 10
+  state 10: #0
+}
+{
+  rule #0: (x:xs) lucid::- (y:ys) = x-y:(xs lucid::- ys)&
+  state 0: #0
+	<app> state 1
+  state 1: #0
+	<app> state 2
+  state 2: #0
+	: state 3
+  state 3: #0
+	<var> state 4
+  state 4: #0
+	<var> state 5
+  state 5: #0
+	<app> state 6
+  state 6: #0
+	<app> state 7
+  state 7: #0
+	: state 8
+  state 8: #0
+	<var> state 9
+  state 9: #0
+	<var> state 10
+  state 10: #0
+}
+{
+  rule #0: lucid::- (x:xs) = -x:(lucid::- xs)&
+  state 0: #0
+	<app> state 1
+  state 1: #0
+	<app> state 2
+  state 2: #0
+	: state 3
+  state 3: #0
+	<var> state 4
+  state 4: #0
+	<var> state 5
+  state 5: #0
+}
+a lucid::+ b;
+a lucid::+ b
+a lucid::- b;
+a lucid::- b
+lucid::- b;
+lucid::- b
+lucid::- b;
+lucid::- b
+a lucid::+ 1;
+a lucid::+ 1
+a lucid::- 1;
+a lucid::- 1
+lucid::- 1;
+lucid::- 1
+lucid::- 1;
+lucid::- 1
