@@ -1,3 +1,13 @@
+2017-03-02  Albert Graef  <aggraef@gmail.com>
+
+	* interpreter.cc, printer.cc, symtable.cc: Overloading of binary
+	minus in a namespace.
+
+	The compiler now handles this by manufacturing a corresponding
+	unary minus operator and an accompanying "neg" function symbol in
+	the same namespace, so that the overloaded "-" operator works in
+	exactly the same manner as the default one.
+
 2017-02-26  Albert Graef  <aggraef@gmail.com>
 
 	* pure.cc (main): Let --version report the git revision if we have
